--- a/PlantTracker/Resources/Styles/Styles.xaml
+++ b/PlantTracker/Resources/Styles/Styles.xaml
@@ -442,7 +442,7 @@
     </Style>
 
     <Style x:Key="CardFrame" TargetType="Border">
-        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light=White, Dark={StaticResource Gray900}}"/>
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource CardBackgroundLight}, Dark={StaticResource CardBackgroundDark}}"/>
         <Setter Property="Stroke" Value="{StaticResource Secondary}"/>
         <Setter Property="StrokeThickness" Value="1"/>
         <Setter Property="StrokeShape" Value="RoundRectangle 12"/>
