--- a/PlantTracker/Views/SettingsPage.xaml
+++ b/PlantTracker/Views/SettingsPage.xaml
@@ -23,7 +23,22 @@
 
             <VerticalStackLayout Spacing="4">
                 <Label Text="Zip Code" FontSize="12" TextColor="Gray"/>
-                <Label Text="{Binding ZipCode}" FontSize="16"/>
+                <Grid ColumnDefinitions="*,Auto" ColumnSpacing="8">
+                    <Entry Grid.Column="0"
+                           Text="{Binding ZipCode}"
+                           FontSize="16"
+                           Placeholder="Enter zip code"
+                           Keyboard="Numeric"
+                           ReturnType="Done"
+                           ReturnCommand="{Binding SaveZipCodeCommand}"/>
+                    <Button Grid.Column="1"
+                            Text="Save"
+                            Command="{Binding SaveZipCodeCommand}"
+                            IsEnabled="{Binding IsNotBusy}"
+                            Style="{StaticResource PrimaryButton}"
+                            FontSize="13"
+                            Padding="12,8"/>
+                </Grid>
             </VerticalStackLayout>
 
             <BoxView HeightRequest="1" Color="{StaticResource Secondary}" Margin="0,8"/>
